# nekBench

./: CMakeLists.txt  build.sh  set_Advisor_env.sh  set_OCCA_env.sh
axhelm/: CMakeLists.txt  kernelHelper.cpp  main.cpp
bw/: main.cpp
core/: meshSetup.cpp  setCompilerFlags.hpp  types.h
gs/: CMakeLists.txt  main.cpp  mygs.cpp
modulefiles/: nekbench
nekBone/: CMakeLists.txt  main.cpp  setup.cpp  setup.ini
scripts/: cbuild_occa.sh
